[package]
name = "http-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1"
axum = "0.8.1"
bytes = "1.10.0"
clap = { version = "3", features = ["derive"] }
env_logger = "0.11"
futures = "0.3.31"
hickory-resolver = { version = "*", features = [
    "tokio",
    "dns-over-https-rustls",
] }
http-body-util = "0.1.2"
# http = "1.2.0"
hyper = "1.6.0"
log = "0.4"
# matchit = "0.8.6"
pingora = { git = "https://github.com/cloudflare/pingora.git", features = [
    "lb",
    "proxy",
    "rustls",
] }
pingora-runtime = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"

[dev-dependencies]
